// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate documentation > For simple cases 1`] = `
[
  {
    "defaultValue": undefined,
    "description": undefined,
    "flags": {
      "isOptional": false,
    },
    "name": "newString",
    "typeName": "string",
  },
]
`;

exports[`Generate documentation > deal with more complex types 1`] = `
[
  {
    "description": "Generic return value",
    "inheritedFrom": undefined,
    "name": "findAll",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "Array",
      "typeArguments": [
        {
          "name": "HTMLElement",
        },
      ],
    },
  },
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findSomething",
    "parameters": [],
    "returnType": {
      "isNullable": true,
      "name": "TestUtilWrapper",
      "typeArguments": undefined,
    },
  },
  {
    "description": "Method overload example",
    "inheritedFrom": undefined,
    "name": "keydown",
    "parameters": [
      {
        "defaultValue": undefined,
        "description": undefined,
        "flags": {
          "isOptional": false,
        },
        "name": "keyCode",
        "typeName": "number",
      },
    ],
    "returnType": {
      "isNullable": false,
      "name": "void",
      "typeArguments": undefined,
    },
  },
  {
    "description": "Method overload example",
    "inheritedFrom": undefined,
    "name": "keydown",
    "parameters": [
      {
        "defaultValue": undefined,
        "description": undefined,
        "flags": {
          "isOptional": false,
        },
        "name": "keyboardEventProps",
        "typeName": "KeyboardEventInit",
      },
    ],
    "returnType": {
      "isNullable": false,
      "name": "void",
      "typeArguments": undefined,
    },
  },
  {
    "description": "Generic arguments",
    "inheritedFrom": undefined,
    "name": "setAll",
    "parameters": [
      {
        "defaultValue": undefined,
        "description": undefined,
        "flags": {
          "isOptional": false,
        },
        "name": "all",
        "typeName": "Array<HTMLElement>",
      },
    ],
    "returnType": {
      "isNullable": false,
      "name": "void",
      "typeArguments": undefined,
    },
  },
]
`;

exports[`Generate documentation > deal with re-exports > alert wrapper methods 1`] = `
[
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findContent",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "ElementWrapper",
      "typeArguments": undefined,
    },
  },
]
`;

exports[`Generate documentation > deal with re-exports > button wrapper methods 1`] = `
[
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findText",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "ElementWrapper",
      "typeArguments": undefined,
    },
  },
]
`;

exports[`Generate documentation > deal with re-exports > card item wrapper methods 1`] = `
[
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findContent",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "ElementWrapper",
      "typeArguments": undefined,
    },
  },
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findHeader",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "ElementWrapper",
      "typeArguments": undefined,
    },
  },
]
`;

exports[`Generate documentation > deal with re-exports > cards wrapper methods 1`] = `
[
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findItems",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "Array",
      "typeArguments": [
        {
          "name": "CardWrapper",
        },
      ],
    },
  },
]
`;

exports[`Generate documentation > deal with re-exports > dropdown wrapper methods 1`] = `
[
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findHighlightedOption",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "OptionWrapper",
      "typeArguments": undefined,
    },
  },
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findItemGroup",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "DropdownWrapper",
      "typeArguments": undefined,
    },
  },
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findItems",
    "parameters": [],
    "returnType": {
      "isNullable": false,
      "name": "Array",
      "typeArguments": [
        {
          "name": "OptionWrapper",
        },
      ],
    },
  },
]
`;

exports[`Generate documentation > deal with re-exports > option wrapper methods 1`] = `
[
  {
    "description": undefined,
    "inheritedFrom": undefined,
    "name": "findLabel",
    "parameters": [],
    "returnType": {
      "isNullable": true,
      "name": "ElementWrapper",
      "typeArguments": undefined,
    },
  },
]
`;
